# ultimain

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cognitive/: tensor_logic_paper.tex
cognitive/gneural-net/.bolt/: prompt
cognitive/gneural-net/.github/instructions/: make it awsome!.instructions.md
cognitive/gneural-net/.github/workflows/: c-cpp.yml
docs/: cognitive_npc_architecture.md  exult_build_report.md  exult_npc_analysis.md  gis_format_comparison.md  npc_ai_implementation_report.md  pentagram_build_report.md  world_map_structure.md
engines/exult/: CMakeLists.txt  cmake_config.h.in
engines/exult/data/: exult.flx  exult_bg.flx  exult_bg_flx.h  exult_flx.h  exult_si_flx.h
engines/exult/data/bg/: introsfx_mt32.flx  introsfx_mt32_flx.h  introsfx_sb.flx  introsfx_sb_flx.h
engines/exult/msvcstuff/vs2019/: Exult.sln  Exult.vcxproj
engines/exult/msvcstuff/vs2019/data/: data.vcxproj
engines/exult/msvcstuff/vs2019/exconfig/: exconfig.vcxproj
engines/exult/msvcstuff/vs2019/expack/: expack - xp.vcxproj  expack.vcxproj
engines/exult/msvcstuff/vs2019/exult_studio/: exult_studio.vcxproj
engines/exult/npcai/: CMakeLists.txt  DialogueHooks.cpp  DialogueHooks.h  ExultAIIntegration.h  ExultNPCBridge.cpp  ExultNPCBridge.h  NPCProfileLoader.h  ScheduleIntegration.cpp  ScheduleIntegration.h
engines/exult/npcai/data/: sample_npcs.json
engines/exult/tools/: CMakeLists.txt
engines/exult/tools/smooth/: smooth.sln  smooth.vcproj
engines/exult/win32/: exult.exe.manifest  exult_studio.exe.manifest
engines/npc/: CMakeLists.txt
engines/npc/examples/: CMakeLists.txt  dialogue_demo.cpp  npc_demo.cpp
engines/npc/include/: NPCSystem.h
engines/npc/include/aiml/: AIMLEngine.h  HybridDialogue.h
engines/npc/include/economy/: EconomicSystem.h
engines/npc/include/llm/: TinyLLM.h
engines/npc/include/memory/: MemorySystem.h
engines/npc/include/neural/: NeuralNetwork.h
engines/npc/include/persona/: Persona.h
engines/npc/include/reasoning/: RuleSet.h  TensorLogic.h
engines/npc/include/social/: RelationshipSystem.h
engines/npc/include/urban/: UrbanDynamics.h
engines/npc/src/: AIMLEngine.cpp  EconomicSystem.cpp  HybridDialogue.cpp  MemorySystem.cpp  NPCSystem.cpp  NeuralNetwork.cpp  Persona.cpp  RelationshipSystem.cpp  RuleSet.cpp  TensorLogic.cpp  TinyLLM.cpp  UrbanDynamics.cpp
engines/npc/tests/: CMakeLists.txt  test_memory_system.cpp  test_neural_network.cpp  test_persona.cpp  test_tensor_logic.cpp
engines/ultima8/: CMakeLists.txt  config.h  pentagram.cpp
engines/ultima8/audio/: AudioMixer.cpp  AudioMixer.h  XMidiStubs.cpp
engines/ultima8/audio/midi/: LowLevelMidiDriver.h
engines/ultima8/audio/midi/timidity/: timidity.cpp
engines/ultima8/filesys/: IDataSource.h  OutputLogger.cpp  OutputLogger.h
engines/ultima8/graphics/: BaseSoftRenderSurface.cpp  BaseSoftRenderSurface.h  RenderSurface.cpp  RenderSurface.h  SKFPlayer.cpp  SoftRenderSurface.cpp
engines/ultima8/graphics/fonts/: FontManager.cpp  TTFont.cpp
engines/ultima8/graphics/scalers/: Scale2xScaler.cpp
engines/ultima8/gumps/: OptionsGump.cpp
engines/ultima8/gumps/widgets/: EditWidget.cpp
engines/ultima8/kernel/: GUIApp.cpp  GUIApp.h  HIDKeys.cpp  HIDKeys.h  HIDManager.cpp  HIDManager.h  Joystick.cpp  JoystickStubs.cpp  MemoryManager.cpp  ToolStubs.cpp
engines/ultima8/misc/: pent_include.h  sdl2_compat.h  sdl_compat.h
engines/ultima8/world/actors/: AvatarMoverProcess.cpp  Pathfinder.cpp
launcher/: CMakeLists.txt  main.cpp
reference/u8_usecode/: EUSECODE.FLX
research/: exult_studio_docs.md  exult_tools.md  pentagram_docs.md  u7_file_formats.md  u8_file_formats.md
shared/: config.h
shared/audio/: ultima_audio.h
shared/files/: ultima_files.h
tests/: CMakeLists.txt  test_framework.h
tests/shared/: test_common_types.cpp  test_exceptions.cpp
tools/osm2ultima/: README.md  osm2ultima.py  osm_shape_mapping.py  test_osm_data.json
tools/osm2ultima/covent_garden_test/: map.geojson  summary.json  terrain.txt
tools/osm2ultima/new_york_labyrinth/: GAME_DESIGN.md  summary.json  terrain.txt
tools/osm2ultima/new_york_labyrinth/ireg/: u7ireg00
tools/osm2ultima/tests/: __init__.py  test_osm2ultima.py
web/: README.md  index.html
web/assets/: build-diskimage.sh
web/js/: cheerpx-engine.js  data-manager.js
